# climakitaegui

./: .gitignore  LICENSE  README.md  __init__.py  environment.yml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci-main.yml  ci-not-main.yaml  ci.yaml
climakitaegui/: __init__.py
climakitaegui/.github/workflows/: ci.yaml
climakitaegui/core/: data_interface.py  data_view.py
climakitaegui/explore/: __init__.py  agnostic.py  amy.py  threshold_tools.py  thresholds.py  timeseries.py  typical_meteorological_year.py  vulnerability.py  warming.py
climakitaegui/util/: utils.py
docs/: conf.py  index.rst  requirements.txt
test/core/: test_data_interface.py
test/explore/: test_typical_meteorological_year.py
