[metadata]
name = climakitaegui
version = 1.2.0
author = Cal-Adapt Analytics Engine Team
author_email = analytics@cal-adapt.org
description = Climate data analysis toolkit GUI support
long_description = file: README.md
url = https://github.com/cal-adapt/climakitaegui
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Development Status :: 1 - Planning

[options]
packages = find:
install_requires =
    cartopy
    climakitae
    geoviews
    holoviews
    hvplot
    ipython
    matplotlib
    numpy
    pandas
    panel
    param
    scipy
    seaborn
    shapely
    xarray
tests_require =
    pytest

[options.extras_require]
docs =
    Sphinx
    sphinx-book-theme
    sphinx-design
    nbsphinx

[options.package_data]
* = data/*.csv, data/cmaps/*.txt