[metadata]
name = climakitaegui
version = 1.2.3
author = Cal-Adapt Analytics Engine Team
author_email = analytics@cal-adapt.org
description = Climate data analysis toolkit GUI support
long_description = file: README.md
url = https://github.com/cal-adapt/climakitaegui
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Development Status :: 1 - Planning

[options]
packages = find:
install_requires =
    climakitae
    geoviews
    holoviews
    hvplot
    ipython<=8.17.2
    matplotlib
    panel<=1.5.5
tests_require =
    pytest

[options.extras_require]
docs =
    Sphinx
    sphinx-book-theme
    sphinx-design
    nbsphinx

[options.package_data]
* = data/*.csv, data/cmaps/*.txt